--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -224,7 +224,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-Hunt_for_blood.TimeStamp=2024.02.19-10.40.58
+Hunt_for_blood.TimeStamp=2024.02.26-09.43.44
 Hunt_for_blood.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.01.08-18.19.03
 StorageServerClient.LastCompileMethod=External
@@ -1349,8 +1349,6 @@ SynthBenchmark.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/AI_Advanced/Objects/PhysicsOBJ.PhysicsOBJ
 OpenAssetsAtExit=/Game/AI_Advanced/Objects/Interruptor.Interruptor
 
 [ContentBrowserRecent]
@@ -3735,6 +3733,7 @@ Interruptor_C.HLOD=True
 Interruptor_C.Physics=True
 Interruptor_C.WorldPartition=True
 Interruptor_C.Events=True
+Interruptor_C.Default=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" "
@@ -3879,7 +3878,7 @@ BP_sistema_Equipamiento_C.Activation=True
 BP_sistema_Equipamiento_C.Cooking=True
 BP_sistema_Equipamiento_C.Events=True
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
-Object="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
@@ -3891,9 +3890,9 @@ AnimMontage="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.Ti
 AnimCompositeBase="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SpringArmComponent="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
@@ -4401,7 +4400,7 @@ EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.Defau
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
-K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 Enemy_Health_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 WidgetComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,WidgetComponent.Physics.ConstraintsGroup
@@ -4612,6 +4611,7 @@ SplineMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyW
 PhysicsHandleComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 PhysicsOBJ_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 Interruptor_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
+All Buttons Pressed=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -5181,7 +5181,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=4
+PreviewFeatureLevel=3
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -5271,8 +5271,8 @@ Project=B:/UE_5.2/
 
 [Python]
 LastDirectory=
-RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
 Audio=False
